--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -127,6 +127,7 @@
                     android:layout_marginStart="30dp"
                     android:padding="15dp"
                     android:text="Register"
+                    android:onClick="OpenRegisterPage"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
