--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
             android:id="@+id/navigation_notifications"
-            android:name="com.example.intern.ui.notifications.NotificationsFragment"
-            android:label="Profile"
-            tools:layout="@layout/fragment_notifications"/>
+            android:name="com.example.intern.ui.addData.addDataFragment"
+            android:label="@string/title_notifications"
+            tools:layout="@layout/fragment_adddata"/>
 </navigation>
